<resources>
    <string name="app_name">PKGateway</string>
    <string name="welcome">Welcome!</string>
    <string name="free_ip">Free\nIP</string>
    <string name="global_ip">Global\nIP</string>
    <string name="break_all">Break\nAll</string>
    <string name="setting">Setting\n</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noNetwork">No network connection available.</string>
    <string name="working">Working...</string>
    <string name="netError">Unable to access ITS server.</string>
</resources>
