<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/llButton"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true" >
                <Button
                    android:text="@string/free_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btConnectFree"
                    android:layout_weight="1"
                    android:onClick="clickFreeIP" />
                <Button
                    android:text="@string/global_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btConnectGlobal"
                    android:layout_weight="1"
                    android:onClick="clickGlobalIP" />
                <Button
                    android:text="@string/break_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btBreakAll"
                    android:layout_weight="1"
                    android:onClick="clickBreakAll" />
                <Button
                    android:text="@string/setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btSetting"
                    android:layout_weight="1"
                    android:onClick="clickSetting" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/llButton">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                    <TextView
                        android:text="@string/welcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvInfo" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>
</layout>
